清理演进痕迹